deployments/pocketid/ingress.yaml

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocketid-ingress
  namespace: pocket-id
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pocketid.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: pocket-id-service
          port: 1411
    - match: Host(`pocketid.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: pocket-id-service
          port: 1411
      middlewares:
        - name: default-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
